reject -> cancel message

--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -130,7 +130,7 @@
 
 <ng-template #listReject>
     <section class="subheader">
-        <label class="header-cat">Awaiting reject confirmation</label>
+        <label class="header-cat">Awaiting cancel confirmation</label>
     </section>
     <mat-grid-list class="my-books" [cols]="numCols" gutterSize="10" rowHeight="5:8" (window:resize)="onResize()">
         <mat-grid-tile *ngFor="let book of waiting_reject_confirm_arr" (click)="showBookNavbar(book)" style="overflow: visible;">
