--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -84,7 +84,7 @@ ball {
     //border-bottom: 2px solid #757575;
     flex: auto;
     display: flex;
-    margin-bottom: 10px;
+    margin-bottom: 2%;
   }
   
 
