--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.html
@@ -1,7 +1,7 @@
 <div>
   <container-element [ngSwitch]="this.which_page">
     <div *ngSwitchCase="'my_requests'">
-      <div class="mybooks">
+      <div class="myrequests">
         <section class="header">
           <label class="header-cat">My Requests</label>
         </section>
