--- a/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-requests/my-requests.component.scss
@@ -17,7 +17,9 @@ body{
     margin-left:  5%;
     margin-right: 5%;
   }
-
+.myrequests{
+  padding: 0;
+}
   .centered {
     position: absolute;
     top: 50%;
