--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -89,11 +89,7 @@ ball {
   border-radius: 0px 0px 40px 40px;
   flex: auto;
   display: flex;
-<<<<<<< HEAD
   margin-bottom: 2%;
-=======
-  margin-bottom: 10px;
->>>>>>> master
 }
 
 .subheader
@@ -110,7 +106,9 @@ ball {
   flex: auto;
   display: flex;
 }
-
+.mybooks{
+  padding: 0;
+}
 label.header-cat {
   flex-grow: 2;
   position: relative;
