--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.html
@@ -221,6 +221,6 @@
 
 <ng-template #noRequestsYet>
     <button mat-button label class="no-req-msg" (click)="goToAddbook()">
-        No requests yet. Add Books to share   
+        No book shared yet. Add Books to share   
     </button>
 </ng-template>
