--- a/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
+++ b/BookItSrc/src/app/main/sub-main/my-books/my-books.component.scss
@@ -143,6 +143,12 @@ section {
   background-color: #00b1b8;
 }
 
+.add-icon-normal{
+  border-radius: 50%;
+  filter: drop-shadow(rgb(43, 39, 39) 1px 1px 2px);
+  background-color: #00b1b8;
+}
+
   .book-bottom{
     position: absolute;
     overflow: hidden;
