--- a/BookItSrc/src/app/main/sub-main/settings/tutorial/tutorial.component.html
+++ b/BookItSrc/src/app/main/sub-main/settings/tutorial/tutorial.component.html
@@ -7,8 +7,8 @@
   </section>
 
   <section>
-    <video controls (click)="toggleVideo()" class="video" #videoPlayer>
-      <source src="{{videoSource}}" type="video/mp4" /> Browser not supported
+    <video controls  class="video" #videoPlayer>
+      <source src="http://localhost:4200/assets/videos/bambookTutorial.mp4" type="video/mp4" /> Browser not supported
     </video>
   </section>
 </div>
