--- a/BookItSrc/src/app/main/sub-main/settings/tutorial/tutorial.component.scss
+++ b/BookItSrc/src/app/main/sub-main/settings/tutorial/tutorial.component.scss
@@ -3,6 +3,11 @@
     height: 100%;
 }
 
+section{
+  align-items: center;
+  justify-content: stretch;
+}
+
 .header {
     background-color: #2f3842; 
     color: white;
