--- a/BookItSrc/src/app/main/sub-main/sub-main.component.html
+++ b/BookItSrc/src/app/main/sub-main/sub-main.component.html
@@ -2,7 +2,7 @@
 	<app-settings></app-settings>
 </div>
 
-<div *ngIf="(_optionEnabled$ | async) ==='explorer'">
+<div style="height: 100%;" *ngIf="(_optionEnabled$ | async) ==='explorer'">
 	<app-explore></app-explore>
 </div>
 
